--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,11 @@
 [build-system]
-requires = ["flit_core >=2,<4"]
+requires = [
+  "flit_core >=2,<4",
+  "typer >= 0.3.2",
+  "typer-cli >= 0.0.11",
+  "PyYAML >=5.3.1",
+  "rich >=9.5.1"
+]
 build-backend = "flit_core.buildapi"
 
 [tool.flit.metadata]
